# Spatial.Engine

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  cli.py  conanfile.py  conanfile.txt  imgui.ini  setup.py
CMake/: Doxygen.cmake  (+9 more)
Spatial.Core/: CMakeLists.txt
Spatial.Core/include/spatial/: Application.h  EntryPoint.h  Window.h  WindowManager.h  hello.h  init.h  spatial.h
Spatial.Core/src/: Application.cpp  EntryPoint.cpp  Window.cpp  WindowManager.cpp  hello.cpp
Spatial.Core/src/assets/: AggregatorLoader.cpp  DirMapLoader.cpp  MemoryLoader.cpp  PhysicalDirLoader.cpp
Spatial.Core/src/common/: Configuration.cpp  EBus.cpp  Exceptions.cpp  Key.cpp  KeyAction.cpp  Logger.cpp  ResourceUtils.cpp  StringHelpers.cpp
Spatial.Core/src/core/: Application.cpp  Asset.cpp  Clock.cpp  ConfigurationLoader.cpp  CoreSystemBundle.cpp  EBus.cpp  Initializer.cpp  Logger.cpp  SystemSignals.cpp
Spatial.Core/src/desktop/: InputState.cpp  InputSystem.cpp  MessageBox.cpp  PlatformContext.cpp  Window.cpp  WindowContext.cpp
Spatial.Core/src/ecs/: CameraSystem.cpp  EditorCamera.cpp  EntityBuilder.cpp  LightSystem.cpp  Material.cpp  MaterialRegistry.cpp  Mesh.cpp  MeshRegistry.cpp  Registry.cpp  RegistryPublisher.cpp  RegistryUtils.cpp  Relation.cpp  RenderableSystem.cpp  Resource.cpp  ResourceController.cpp  Scene.cpp  SceneManagerSystem.cpp  Script.cpp  TransformSystem.cpp
Spatial.Core/src/facilities/: Initializer.cpp
Spatial.Core/src/input/: Input.cpp  InputState.cpp  InputSubsystem.cpp  InputSystem.cpp  Keyboard.cpp  KeyboardState.cpp  Mouse.cpp  MouseState.cpp
Spatial.Core/src/physics/: SimulationSubsystem.cpp
Spatial.Core/src/render/: ActorBuilder.cpp  Camera.cpp  CameraController.cpp  CameraControllers.cpp  CameraSystem.cpp  CommonResources.cpp  Components.cpp  Engine.cpp  Entity.cpp  EntityBuilder.cpp  IcoSphere.cpp  ImGuiHelpers.cpp  IndirectLightController.cpp  InstanceBuilder.cpp  Light.cpp  LightController.cpp  LightSystem.cpp  MaterialController.cpp  MaterialInstance.cpp  Mesh.cpp  MeshController.cpp  MouseMovementCameraController.cpp  Name.cpp  RenderPipeline.cpp  Renderable.cpp  RenderableMesh.cpp  RenderableMeshSystem.cpp  RenderingSubsystem.cpp  RenderingSystem.cpp  ResourceLoaders.cpp  Resources.cpp  SceneController.cpp  SceneControllerSystem.cpp  SceneRenderingSystem.cpp  SkyBoxController.cpp  SkyboxResources.cpp  Sphere.cpp  Stage.cpp  TextureController.cpp  TextureUtils.cpp  (+6 more)
Spatial.Core/src/rendering/: RenderingSubsystem.cpp
Spatial.Core/src/resources/: AggregateFileSystem.cpp  BoundingBox.cpp  Common.cpp  FilameshFile.cpp  FileSystem.cpp  MemoryFileSystem.cpp  MeshComponents.cpp  PhysicalFileSystem.cpp  ResourceController.cpp  ResourceLoader.cpp
Spatial.Core/src/script/: Isolate.cpp  Parsing.cpp  PlatformContext.cpp  ScriptController.cpp  ScriptSourceStream.cpp  Utils.cpp
Spatial.Core/src/ui/: ImGuiComponents.cpp  ImGuiHelpers.cpp  ImGuiSceneWindow.cpp  UserInterfaceInput.cpp  UserInterfaceRenderer.cpp  UserInterfaceSystem.cpp
Spatial.Core/tests/: AggregateFileSystem.cpp  Application.test.cpp  CMakeLists.txt  DesktopWindowContext.test.cpp  FileSystem.test.cpp  MemoryFileSystem.test.cpp  PhysicalDirLoader.test.cpp  PhysicalFileSystem.test.cpp  RegistryRelation.test.cpp  RegistryResource.test.cpp  RegistrySerialization.test.cpp  RenderingSystem.test.cpp  Stage.test.cpp  StageSerialization.test.cpp  StageView.cpp  StageView.test.cpp  test.cpp
Spatial.Editor/: CMakeLists.txt  assets.json
Spatial.Editor/assets/: AppIcon.icns  CMakeLists.txt
Spatial.Editor/assets/config/: imgui.ini
Spatial.Editor/assets/materials/: color.mat  default.mat  grid.mat  skybox.mat  standard_lit.mat  ui_blit.mat
Spatial.Editor/assets/models/: debug_cube.fbx
Spatial.Editor/assets/scenes/: default.xml
Spatial.Editor/assets/textures/: default_skybox.hdr
Spatial.Editor/src/: Components.cpp  Components.h  CustomComponents.cpp  CustomComponents.h  CustomUserInterface.cpp  CustomUserInterface.h  DefaultMaterial.cpp  DefaultMaterial.h  Editor.cpp  Editor.h  EditorCamera.h  EditorCameraController.cpp  EditorCameraController.h  EditorCameraScript.cpp  EditorCameraScript.h  EditorCameraSystem.cpp  EditorSettings.cpp  EditorSettings.h  EditorSystem.cpp  EditorSystem.h  FileSystem.cpp  FileSystem.h  ImGuiComponents.cpp  ImGuiComponents.h  ImGuiDockSpace.cpp  ImGuiDockSpace.h  ImGuiSceneWindow.cpp  ImGuiSceneWindow.h  ImGuiWindow.cpp  ImGuiWindow.h  Jobs.h  Materials.cpp  Materials.h  Resources.cpp  Resources.h  SceneEditorSystem.cpp  SceneEditorSystem.h  Serialization.cpp  Serialization.h  Settings.h  (+4 more)
Spatial.Editor/src/ecs/: Components.cpp  Components.h  Materials.cpp
Spatial.Editor/src/ui/: Components.cpp  Components.h  DragAndDrop.cpp  DragAndDrop.h  EntityProperties.cpp  EntityProperties.h  FilesExplorer.cpp  FilesExplorer.h  Icons.h  Managers.cpp  Managers.h  MaterialInputs.cpp  MaterialInputs.h  Menu.cpp  Menu.h  Modals.cpp  Modals.h  Search.cpp  Search.h
Spatial.Graphics/: CMakeLists.txt
Spatial.Graphics/src/: Camera.cpp  CameraController.cpp  CocoaHelper.mm  Engine.cpp  Entity.cpp  Light.cpp  LightController.cpp  MaterialController.cpp  MaterialInstance.cpp  MeshController.cpp  MeshResources.cpp  Renderable.cpp  RenderingSystem.cpp  Resources.cpp  SceneController.cpp  SceneRenderingSystem.cpp  SkyboxResources.cpp  TextureController.cpp  TextureResources.cpp  TextureUtils.cpp  TextureView.cpp  Transform.cpp  TransformController.cpp
Spatial.Graphics/tests/: CMakeLists.txt  RenderingSystem.test.cpp  main.cpp
Spatial.Res/: CMakeLists.txt
Spatial.Res/src/: main.cpp
Spatial.Sandbox/: CMakeLists.txt
Spatial.Sandbox/src/: CommonResourceManagers.h  Components.h  DebugCubeSystem.cpp  DebugCubeSystem.h  DebugMeshSystem.cpp  DebugMeshSystem.h  ResourceManager.h  Sandbox.cpp  Sandbox.h  SandboxInterface.cpp  SandboxInterface.h  engine.cpp  engine.h  main.cpp  utils.cpp  utils.h
Spatial.UI/: CMakeLists.txt
Spatial.UI/src/: ImGuiHelpers.cpp  ImGuiRenderer.cpp  UserInterfaceSystem.cpp
(+440 files in other folders)
